# $Id$

2008-05-26	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveDomDocument.class.php: primitive for
	parsing and validating XML DOM.

	* core/Form/Primitives/BasePrimitive.class.php: getErrorLabel() for
	custom validation error messages.

	* core/Form/Form.class.php: getPrimitiveErrorLabel() for custom
	message, getTextualErrors() fixed to return such a messages too.

	* test/core/PrimitiveDomDocumentTest.class.php, test/misc/text.xsd:
	corresponding tests.

2008-05-23	Pismenny E. Dmitry

	* main/Net/Http/CurlHttpClient.class.php: can send cookie now.
	Fixed GET query construction.

2008-05-02	Konstantin V. Arkhipov

	* main/DAOs/: fetchEncapsulants is now the private method, only
	makeOnlyObject and completeObject are free for customizations now.

	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-26	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator
	filter were merged from 0.10.

2008-04-16	Ivan Y. Khvostishkov

	* core/Exceptions/DatabaseIsDownException.class.php: when connect
	fails.

2008-04-13	Konstantin V. Arkhipov

	* test/core/: tests for Binary and Boolean types added.

	* core/Types/Range.class.php: API changed wrt SingleRange interface
	and RangedType class.

	* core/Form/Primitives/: ported to use basic types as input validation.

	* core/Types/: new types were implemented or ported from standalone
	classes: Binary, Boolean, Date, DateRange, HashMap, Range, Time,
	Timestamp, Range.

	* global.inc.php.tpl: class cache now detects classes with errors
	during compile time.

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-09	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: spawn() method for
	cloning primitives. It's one of the possible soft-tricks to implement
	anonymous primitives.

2008-04-08	Konstantin V. Arkhipov

	* core/Form/: RegulatedForm removed in favour of PrimitiveRule.
